# pulumi-bootstrap

./: .gitignore  Cargo.toml  README.md
help/: azure-pipelines.yaml  dev.yaml  index.ts  prod.yaml  stage.yaml  test.yaml
npm/: local_test.sh  move-binary.js  package-lock.json  package.json
snippets/: cache.ts  container-registry.ts  database.ts  keyvault.ts  service_bus.ts  storage.ts
src/: cli.rs  main.rs  table_poc.rs
src/commands/: config.rs  project.rs  snippet.rs
src/helpers/: config_helper.rs  cost_helper.rs  entrypoint_helper.rs  pipeline_helper.rs
src/tui/: app.rs  constants.rs  enums.rs  snippet_select.rs  tui_main.rs  ui.rs  validation.rs
stillworks/: dev.yaml  prod.yaml  stage.yaml  test.yaml
test_file/: test_name.ts
